--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "ts-node --esm src/app/backend/server.ts",
     "lint": "next lint"
   },
+  "type" : "module",
   "dependencies": {
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
@@ -15,11 +16,17 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "express": "^4.18.2",
     "next": "13.4.3",
+    "pg": "^8.11.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/pg": "^8.10.2"
   }
 }
