--- a/package.json
+++ b/package.json
@@ -3,20 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "ts-node --esm --files ./src/app/backend/server.ts",
     "build": "next build",
-    "start": "ts-node --esm src/app/backend/server.ts",
+    "start": "next start",
     "lint": "next lint"
   },
-  "type" : "module",
+  "type": "module",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "next": "13.4.3",
     "pg": "^8.11.1",
     "postcss": "8.4.23",
