--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "lint": "next lint",
     "deb": "concurrently \"npm run dev\" \"npm run server\""
   },
-  "type":"module",
+  "type": "module",
   "dependencies": {
+    "@hookform/resolvers": "^3.3.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/jsonwebtoken": "^9.0.2",
@@ -31,6 +32,8 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
+    "resolvers": "link:@types/hookform/resolvers",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "zod": "^3.22.0"
