--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
+    "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
@@ -28,6 +29,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "express": "^4.18.2",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "next": "13.4.3",
     "pg": "^8.11.1",
